# radiantkit-app-template

./: Cargo.toml  LICENSE  README.md
app/: package-lock.json  package.json
app/src/: App.tsx
app/src/core/: index.ts
app/src/core/context/: index.tsx
app/src/core/controller/: index.ts
runtime/: Cargo.toml
runtime/src/: lib.rs  runtime.rs
